# Vpn

./: README.md  pyproject.toml  requirements.txt
client/: vpn_client.py
config/: domains.yml  server.yml
docs/: DEPLOYMENT.md
server/: vpn_server.py
shared/: __init__.py  database.py  models.py  security.py  services.py
webapp/: main.py  manage.py
webapp/static/: style.css
webapp/templates/: dashboard.html  home.html
